--- a/Petsion.html
+++ b/Petsion.html
@@ -10,7 +10,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com/%22%3E">
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Raleway:wght@200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="responsive.css">
     <link rel="stylesheet" href="respon.css">
 
@@ -86,10 +85,10 @@
         </div>
         <div class="social-media">
           <p>Follow Us</p>
-          <a href="#" class="fab fa-facebook-square"></a>
-          <a href="#" class="	fab fa-instagram"></a>
-          <a href="#" class="fab fa-twitter-square"></a>
-        </div>
+              <a href="#" class="btn-facebook"><img src="icon fb.png" alt= "image" height="50" width="50"></a>
+              <a href="#" class="btn-twitter"><img src="icon twitter.png" alt= "image" height="50" width="50"></a>
+              <a href="#" class="btn-instagram"><img src="icon ig.png" alt= "image" height= "50" width="50"></a>
+        </div> 
         <div class="year">2021</div>   
         </div>
       </div>  
